--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" id="logo"/>
-        <title>http://bettermotherfuckingwebsite.com/</title>
+        <title>bettermotherfuckingwebsite</title>
     </head>
 
     <body>
