sans aucun http

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <script src="script.js"></script><script
 
           type='text/javascript'
-            src='http://code.jquery.com/jquery-1.11.0.js'></script>
+            src='code.jquery.com/jquery-1.11.0.js'></script>
           <script type='text/javascript'>
           $(window).load(function(){
               $( "#change_background" ).on( "click", function() {
@@ -73,7 +73,7 @@
 
 
           type='text/javascript'
-            src='http://code.jquery.com/jquery-1.11.0.js'></script>
+            src='code.jquery.com/jquery-1.11.0.js'></script>
           <script type='text/javascript'>
           $(window).load(function(){
               $( "#change_background" ).on( "click", function() {
