--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
           type='text/javascript'
-            src='http://code.jquery.com/jquery-1.11.0.js'></script>
+            src='code.jquery.com/jquery-1.11.0.js'></script>
           <script type='text/javascript'>
           $(window).load(function(){
               $( "#change_background" ).on( "click", function() {
@@ -114,7 +114,7 @@
 
 
           type='text/javascript'
-            src='http://code.jquery.com/jquery-1.11.0.js'></script>
+            src='code.jquery.com/jquery-1.11.0.js'></script>
           <script type='text/javascript'>
           $(window).load(function(){
               $( "#change_background" ).on( "click", function() {
